# high-school-fun

./: README.md
abc-game-of-life/: .gitignore  CMakeLists.txt  README.md  build.sh
abc-game-of-life/include/: game_states.h
abc-game-of-life/src/: game_states.cpp  main.cpp  raw_mode.cpp
abclisnake/: .gitignore  CMakeLists.txt  README.md
abclisnake/include/: game_elements.h  game_field.h  game_states.h  point.h  raw_mode.h
abclisnake/src/: game_elements.cpp  game_field.cpp  game_states.cpp  main.cpp  point.cpp
cli-tic-tac-toe/: README.md  main.py
gui-tic-tac-toe/: README.md  icon.xbm  main.py  windows.py
hspy-ftp-client/: README.md  main.py  navigation.py  window.py
sbm-py/: README.md  graph.py  icon.xbm  main.py  windows.py
